switch frdata.wm.o cname to point to frdata-eqiad.wm.o
Bug: T255435
Change-Id: I0fda71fe72b24f4f8bfb770d421ff20015fc479e

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -342,7 +342,7 @@ ldap-labs.eqiad 1H  IN CNAME    seaborgium
 ldap-labs.codfw 1H  IN CNAME    serpens
 
 frbast          1H  IN CNAME    frbast-eqiad
-frdata          1H  IN CNAME    frdata1001
+frdata          1H  IN CNAME    frdata-eqiad
 frmon.frdev     1H  IN CNAME    frmon-eqiad.frdev
 
 gerrit        600 IN A        208.80.154.137
