--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -23,6 +23,9 @@ nsa         1H  IN A    198.35.27.27 ; anycast authdns
 ; Google Webmaster Tools verification record for search management
 @           600 IN TXT  "google-site-verification=APNaeC69s87mS4z-sfYqFYONgimBx4Bw22eCIaYEd_g"
 
+; Apple Business Manager domain verification for wikimedia.org. T274592
+@           600 IN TXT  "apple-domain-verification=yYhpGRw8Sw0KZA7k"
+
 ; SPF txt and rr records
 @               600 IN TXT  "v=spf1 ip4:91.198.174.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
 @               600 IN TXT  "FC0MOB7SKLHj0AsevTnJvE0W0YYQkPVYOX3UMrINOSk="
