Reduce TTL for irc CNAME to 5 minutes
To minimise the failover time when migrating to a new VM.

Change-Id: I9fb6fac2c324e99333c52db1df16d21a48f9c4a8

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -372,7 +372,7 @@ intake-logging   600 IN DYNA  geoip!text-next
 intake-analytics 1D  IN CNAME dyna.wikimedia.org.
 
 integration     1D IN CNAME dyna.wikimedia.org.
-irc             1H  IN CNAME    kraz
+irc             5M  IN CNAME    kraz
 
 klaxon          5M  IN CNAME    alert1001
 
