wdqs: new service alias query-preview
IRC context behind this change: https://phabricator.wikimedia.org/T266470#6881510

When it comes time to deploy, we'll follow these steps:
https://wikitech.wikimedia.org/wiki/DNS#Changing_records_in_a_zonefile

Bug: T266470
Change-Id: I0ba0b289506bff1b5160a2c8dfa912be5b0351f7

--- a/templates/wikidata.org
+++ b/templates/wikidata.org
@@ -32,7 +32,8 @@
 ; Servers (alphabetic order)
 
 ; Service aliases
-query       1D IN CNAME dyna.wikimedia.org.
+query         1D IN CNAME dyna.wikimedia.org.
+query-preview 1D IN CNAME dyna.wikimedia.org.
 
 ; Wikis (alphabetic order)
 
