--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -28,10 +28,9 @@ _domainkey  1H  IN TXT  "o=~; r=hostmaster@wikimediafoundation.org;"
 ; DKIM selector key(s)
 fundraising._domainkey  1H  IN TXT  "v=DKIM1; h=sha256; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC61rCxt6xGKmVoId8fqGM1UTnBugf5chUdQfoCDpsgXqQVF1tOacwj3bF9fQdnqVhWeoGwiWOhfB13k/cfPKELgsJKKXEyk7cyBTV4BQ2JqmbPS4m0dD+imISrviPKjNG4uHA4FrjzYiVuv8EzZQw7tUtJuMC26BXZYqi/5YIpFQIDAQAB;"
 
-; CAA records for wikimediafoundation.org - globalsign and digicert (for
+; CAA records for wikimediafoundation.org - digicert and LE (for
 ; continued use in our unified certs) plus LE (for Automattic hosting)
 @           600 IN CAA 0 issue "digicert.com"
-@           600 IN CAA 0 issue "globalsign.com"
 @           600 IN CAA 0 issue "letsencrypt.org"
 @           600 IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
 
