--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -138,8 +138,8 @@ frbast-codfw    1H  IN A    208.80.152.231
 frdata-eqiad    1H  IN A    208.80.155.16
 frdata-codfw    1H  IN A    208.80.152.237
 frdev-eqiad     1H  IN A    208.80.155.13
-frmon-eqiad.frdev 1H  IN A    208.80.155.9
-frmon-codfw.frdev 1H  IN A    208.80.152.235
+frmon-eqiad     1H  IN A    208.80.155.9
+frmon-codfw     1H  IN A    208.80.152.235
 frmx1001        1H  IN A    208.80.155.15
 frmx2001        1H  IN A    208.80.152.236
 fundraising-eqiad 1H  IN A    208.80.155.14
@@ -349,7 +349,8 @@ ldap-labs.codfw 1H  IN CNAME    serpens
 
 frbast          1H  IN CNAME    frbast-eqiad
 frdata          1H  IN CNAME    frdata-eqiad
-frmon.frdev     1H  IN CNAME    frmon-eqiad.frdev
+frmon           1H  IN CNAME    frmon-eqiad
+frmon.frdev     1H  IN CNAME    frmon-eqiad
 
 gerrit        600 IN A        208.80.154.137
 gerrit        600 IN AAAA     2620:0:861:2:208:80:154:137
