--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -47,12 +47,19 @@ $ORIGIN eqiad1.wikimediacloud.org.
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack  5M  IN CNAME  cloudcontrol1003.wikimedia.org.
 
+; the next one will be enabled once migrated, replacing cloudinstances2b-gw
+; wan.cloudgw         5M  IN A      185.15.56.244
+cloudgw1001         5M  IN A      185.15.56.245
+cloudgw1002         5M  IN A      185.15.56.246
+
 $ORIGIN openstack.eqiad1.wikimediacloud.org.
 
 ; neutron virtual router cloudinstances2b-gw
+; this will change to 185.15.56.238 once migrated
 cloudinstances2b-gw 5M  IN A      185.15.56.244
 
 ; general outgoing/egress NAT address (routing_source_ip)
+; this will cange to nat.cloudgw.eqiad1.wikimediacloud.org once migrated
 nat                 5M  IN A      185.15.56.1
 
 ns0                 5M  IN A      208.80.154.135
