Add vrt-wiki.wikimedia.org and vrt-wiki.m.wikimedia.org
otrs-wiki.wikimedia.org is going to be renamed to
vrt-wiki.wikimedia.org.

Bug: T280400
Change-Id: I8844b463f2406943bc30e2a1d0a0c632535991d5

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -271,6 +271,7 @@ usability.m         1D IN CNAME dyna.wikimedia.org.
 uz.m                1D IN CNAME dyna.wikimedia.org.
 ve.m                1D IN CNAME dyna.wikimedia.org.
 vote.m              1D IN CNAME dyna.wikimedia.org.
+vrt-wiki.m          1D IN CNAME dyna.wikimedia.org.
 wb.m                1D IN CNAME dyna.wikimedia.org.
 wikimania.m         1D IN CNAME dyna.wikimedia.org.
 wikimania2005.m     1D IN CNAME dyna.wikimedia.org.
@@ -558,6 +559,7 @@ usability        1D IN CNAME dyna.wikimedia.org.
 uz               1D IN CNAME dyna.wikimedia.org.
 ve               1D IN CNAME dyna.wikimedia.org.
 vote             1D IN CNAME dyna.wikimedia.org.
+vrt-wiki         1D IN CNAME dyna.wikimedia.org.
 wb               1D IN CNAME dyna.wikimedia.org.
 wikimania        1D IN CNAME dyna.wikimedia.org.
 wikimania2005    1D IN CNAME dyna.wikimedia.org.
