Add cname for fundraising.frdev -> frdata-eqiad
Bug: T260571
Change-Id: I520b0857e7e6faa56fe821d9a5060c8ec4fe5e6a

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -607,6 +607,7 @@ diff             1H IN CNAME blog-wikimedia-org.go-vip.net.
 download         1D IN CNAME dyna.wikimedia.org.
 etherpad         1D IN CNAME dyna.wikimedia.org.
 fundraising      1H  IN CNAME    fundraising-eqiad
+fundraising.frdev   1H  IN CNAME    frdata-eqiad
 hue              1D IN CNAME dyna.wikimedia.org.
 iegreview        1D IN CNAME dyna.wikimedia.org.
 jobs             1D IN CNAME dyna.wikimedia.org.
