wikimediacloud.org: add more FQDNs in prepartion for the cloudgw migration
Add a few more comment/hints about the migration.

While at it also add the previously missing FQDN for cloudgw VIP in the
185.15.56.236/30 subnet AKA cloud-gw-transport-eqiad1 (vlan 1107).

Change-Id: I08e9399e28adbc5000dfb75f00adbde7e0e58f80
Signed-off-by: Arturo Borrero Gonzalez <aborrero@wikimedia.org>

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -47,8 +47,10 @@ $ORIGIN eqiad1.wikimediacloud.org.
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack  5M  IN CNAME  cloudcontrol1003.wikimedia.org.
 
-; the next one will be enabled once migrated, replacing cloudinstances2b-gw
+; the next ones will be enabled once migrated, replacing cloudinstances2b-gw
+; nat.cloudgw         5M  IN A      185.15.56.1
 ; wan.cloudgw         5M  IN A      185.15.56.244
+virt.cloudgw        5M  IN A      185.15.56.237
 cloudgw1001         5M  IN A      185.15.56.245
 cloudgw1002         5M  IN A      185.15.56.246
 
