Add grafana-cloud.{wm.o,d.wmnet} to replace labs
Change-Id: I08e3d0f6aaad651d5caf7e8b57a061239410eef0

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -355,6 +355,7 @@ git             1D IN CNAME dyna.wikimedia.org.
 graphite        1D IN CNAME dyna.wikimedia.org.
 graphite-labs   1D IN CNAME dyna.wikimedia.org.
 grafana         1D IN CNAME dyna.wikimedia.org.
+grafana-cloud        1D IN CNAME dyna.wikimedia.org.
 grafana-labs         1D IN CNAME dyna.wikimedia.org.
 grafana-next         1D IN CNAME dyna.wikimedia.org.    ; to replace grafana-beta which has a confusing name
 grafana-rw           1D IN CNAME dyna.wikimedia.org.
