--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -48,24 +48,20 @@ $ORIGIN eqiad1.wikimediacloud.org.
 openstack  5M  IN CNAME  cloudcontrol1003.wikimedia.org.
 
 ; the next ones will be enabled once migrated, replacing cloudinstances2b-gw
-; nat.cloudgw         5M  IN A      185.15.56.1
-; wan.cloudgw         5M  IN A      185.15.56.244
+nat.cloudgw         5M  IN A      185.15.56.1
 virt.cloudgw        5M  IN A      185.15.56.237
+
 vrrp-gw-1120               5M IN A 185.15.56.241
 irb-1120.cloudsw1-c8-eqiad 5M IN A 185.15.56.242
 irb-1120.cloudsw1-d5-eqiad 5M IN A 185.15.56.243
+wan.cloudgw         5M  IN A      185.15.56.244
 cloudgw1001         5M  IN A      185.15.56.245
 cloudgw1002         5M  IN A      185.15.56.246
 
 $ORIGIN openstack.eqiad1.wikimediacloud.org.
 
 ; neutron virtual router cloudinstances2b-gw
-; this will change to 185.15.56.238 once migrated
-cloudinstances2b-gw 5M  IN A      185.15.56.244
-
-; general outgoing/egress NAT address (routing_source_ip)
-; this will cange to nat.cloudgw.eqiad1.wikimediacloud.org once migrated
-nat                 5M  IN A      185.15.56.1
+cloudinstances2b-gw 5M  IN A      185.15.56.238
 
 ns0                 5M  IN A      208.80.154.135
 ns0                 5M  IN AAAA   2620:0:861:2:208:80:154:135
