add analytics-codfw.frdev.wikimedia.org A and PTR records
Bug: T284155
Change-Id: I482cf64dad7ee7dab6564a220bf020f67c809df9

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -578,6 +578,7 @@ za               1D IN CNAME dyna.wikimedia.org.
 2030             1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
 analytics.frdev  1D IN A     208.80.155.4
+analytics-codfw.frdev  1D IN A     208.80.152.238
 blog             1H IN CNAME blog-wikimedia-org.go-vip.net.
 bugs             1D IN CNAME dyna.wikimedia.org.
 bugzilla         1D IN CNAME dyna.wikimedia.org.
