--- a/templates/wikimedia-dns.org
+++ b/templates/wikimedia-dns.org
@@ -28,5 +28,13 @@
 
 ; Wikis (alphabetic order)
 
-; Wikidough
+; Wikidough resolver
 @           600 IN A    185.71.138.138 ; anycasted
+
+; Wikidough check (durum)
+check       600 IN A    185.71.138.139 ; anycasted
+
+; This allows for UUID-based hostname lookups to defeat any client or
+; browser-level caching between check queries, e.g.:
+; https://7fbceba2-fabb-11eb-9a03-0242ac130003.check.wikimedia-dns.org/check
+*.check 5/5 IN DYNA geoip!checkdoh-addrs
