Add Toolhub public DNS name
Toolhub will be deployed in the production Kubernetes cluster. It will
be exposed via the text cache cluster, like most other services.

Bug: T280881
Change-Id: I5470f3eda58394397126883f15c2773e1de13a0b

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -449,6 +449,8 @@ svn             1D IN CNAME dyna.wikimedia.org.
 
 tendril         5M IN CNAME dbmonitor1002
 
+toolhub         1D IN CNAME dyna.wikimedia.org.
+
 toolsadmin      1D IN CNAME dyna.wikimedia.org.
 
 wiki-mail-codfw 1H  IN A        208.80.153.46
