wikimedia-dns: update PTR records for durum
Add PTR records to check.wikimedia-dns.org, the landing page for the
durum service. *.check.wikimedia-dns.org points to 185.71.138.140 or
185.71.138.141, depending on if the query came from a Wikidough host
(see I5a9533), so we set the hosts to "yes.check" and "no.check", and
also add A-records for them.

Bug: T289536
Change-Id: If3f070ad0be25ccf193d02fce0ecc0722b3247e8

--- a/templates/wikimedia-dns.org
+++ b/templates/wikimedia-dns.org
@@ -38,3 +38,6 @@ check       600 IN A    185.71.138.139 ; anycasted
 ; browser-level caching between check queries, e.g.:
 ; https://7fbceba2-fabb-11eb-9a03-0242ac130003.check.wikimedia-dns.org/check
 *.check 5/5 IN DYNA geoip!checkdoh-addrs
+
+yes.check   600 IN A    185.71.138.140 ; anycasted
+no.check    600 IN A    185.71.138.141 ; anycasted
