add a/ptr records for payments-staging.wikimedia.org
Bug: T289869
Change-Id: I59f7bb9db02ef8e691a8b739c8d825ecc46d296e

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -399,6 +399,7 @@ payments        5M  IN CNAME    payments-eqiad
 payments.frdev  5M  IN CNAME    payments-codfw
 payments-eqiad  1H  IN A        208.80.155.5
 payments-codfw  1H  IN A        208.80.152.228
+payments-staging 1H  IN A        208.80.155.10
 
 payments-listener-eqiad 1H  IN A    208.80.155.12
 payments-listener-codfw 1H  IN A    208.80.152.233
