Add cname for commons-query.wikimedia.org
Bug: T282117
Change-Id: I51c6ce615714ae7af4b6c60f9b4ec7c470f6c199

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -320,6 +320,8 @@ bienvenida      1D IN CNAME dyna.wikimedia.org.
 
 cache           1D IN CNAME dyna.wikimedia.org.
 
+commons-query   1D IN CNAME dyna.wikimedia.org.
+
 config-master   1D IN CNAME dyna.wikimedia.org.
 
 contint         5M IN CNAME contint2001.wikimedia.org.
