learn.wiki: Add apex A records
Bug: T291090
Change-Id: Iacb5138798b90a686af62908c867f8ef60b1b0cb

--- a/templates/learn.wiki
+++ b/templates/learn.wiki
@@ -16,6 +16,10 @@
 ; MX records - Amazon SES (https://phabricator.wikimedia.org/T290974)
 @           1H  IN MX   10 inbound-smtp.us-east-1.amazonaws.com.
 
+; apex A record (https://phabricator.wikimedia.org/T291090)
+@           1H  IN A    13.248.190.88
+@           1H  IN A    76.223.57.52
+
 
 ; TXT records
 ; Amazon SES domain verification record (https://phabricator.wikimedia.org/T290974)
