wikimediacloud.org: Add CAA records
Change-Id: I0cbf5420cccc127273aaa9793f6a48db6218530c

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -7,6 +7,10 @@
 @           1D  IN NS   ns1.wikimedia.org.
 @           1D  IN NS   ns2.wikimedia.org.
 
+; CAA records
+@           600 IN CAA 0 issue "letsencrypt.org"
+@           600 IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
+
 ;
 ; CODFW
 ; codfw1dev openstack region
