learn.wiki: update record for forum.learn.wiki
Bug: T292537
Change-Id: I31504172ebfed8983bfb887cbb260874b26d39b7

--- a/templates/learn.wiki
+++ b/templates/learn.wiki
@@ -48,7 +48,7 @@ preview.stage   1H  IN CNAME    wkm-stage-alb-1830818829.us-east-1.elb.amazonaws
 studio          1H  IN CNAME    wkm-prod-alb-30644061.us-east-1.elb.amazonaws.com.
 preview         1H  IN CNAME    wkm-prod-alb-30644061.us-east-1.elb.amazonaws.com.
 ; https://phabricator.wikimedia.org/T292537
-forum           1H  IN CNAME    wkm-stage-alb-1830818829.us-east-1.elb.amazonaws.com.
+forum           1H  IN CNAME    wkm-prod-alb-30644061.us-east-1.elb.amazonaws.com.
 forum.stage     1H  IN CNAME    wkm-stage-alb-1830818829.us-east-1.elb.amazonaws.com.
 
 
