Revert "apt: add a service description for apt to allow DNS discovery"
This reverts commit 8d390b835d21db94dd450e54ff5352fedb645081.

Reason for revert: returning private ip address

Change-Id: I3d6043741d44989a0ecf8ed44a17c772877eda56

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -300,7 +300,7 @@ alerts          5M  IN CNAME    alert1001
 
 annual          1D IN CNAME dyna.wikimedia.org.
 
-apt             300/10 IN DYNA metafo!disc-apt
+apt             300  IN CNAME   apt1001
 
 archiva         1H  IN CNAME    archiva1002
 
