Add ntp.drmrs.wm.o for initial installs
As noted in the zonefile comment, this is a temporary value until
the local dns+ntp servers are ready.

Bug: T282787
Change-Id: I7da031926c704868234d8aa7f4e9054103cf206c

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -157,6 +157,9 @@ ntp.esams           1H  IN CNAME dns3001
 ;;; eqsin
 ntp.eqsin           1H  IN CNAME dns5001
 
+;;; drmrs
+ntp.drmrs           1H  IN CNAME dns1001 ; DRMRS-TODO: should be dns6001 later
+
 ; Round Robin LVS Service records
 
 ;;; eqiad (only records not auto-generated from Netbox)
