wikimediacloud.org: add A records for cloudgw2001-dev/2002-dev
We would like to ping these address by using the FQDN.

While at it, drop and old comment.

Bug: T294955
Change-Id: Ibbab206d6764808fb33b7f91f7178d818e541a5e
Signed-off-by: Arturo Borrero Gonzalez <aborrero@wikimedia.org>

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -23,6 +23,8 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 openstack  5M  IN CNAME  cloudcontrol2001-dev.wikimedia.org.
 
 nat.cloudgw         5M  IN A      185.15.57.1
+cloudgw2001-dev     5M  IN A      208.80.153.188
+cloudgw2002-dev     5M  IN A      208.80.153.189
 wan.cloudgw         5M  IN A      208.80.153.190
 virt.cloudgw        5M  IN A      185.15.57.9
 
@@ -51,7 +53,6 @@ $ORIGIN eqiad1.wikimediacloud.org.
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack  5M  IN CNAME  cloudcontrol1003.wikimedia.org.
 
-; the next ones will be enabled once migrated, replacing cloudinstances2b-gw
 nat.cloudgw         5M  IN A      185.15.56.1
 virt.cloudgw        5M  IN A      185.15.56.237
 
