--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -622,6 +622,7 @@ moon             1D IN CNAME dyna.wikimedia.org.
 noc              1D IN CNAME dyna.wikimedia.org.
 nyc              1D IN CNAME dyna.wikimedia.org.
 old-bugzilla     1D IN CNAME dyna.wikimedia.org.
+one              1H IN CNAME messaging-wikimedia-org.go-vip.net.
 planet           1D IN CNAME dyna.wikimedia.org.
 ar.planet        1D IN CNAME dyna.wikimedia.org.
 bg.planet        1D IN CNAME dyna.wikimedia.org.
