Define enterprise names for redirects
This creates the name "enterprise" for wikimedia.org,
wikipedia.org, and wikipedia.com, and sends the traffic for these
towards the correct redirector (either MW-level redirects or
ncredir).

Note that "ncredir-parking" covers wikipedia.com (it will also
create an enterprise hostname in all the other ncredir domains,
but that's ok).

Don't push this until after the puppet-side patch in
I3825f63fbc93393ab6246a690cdd3749ae08ed18 is merged and live on
all hosts.

Bug: T296445
Change-Id: Icead1902aafdb33bd24f0601242b54d2a68e2504

--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -86,3 +86,4 @@ stats           1D IN CNAME dyna.wikimedia.org.
 store           1D IN CNAME dyna.wikimedia.org.
 thankyou        1D IN CNAME dyna.wikimedia.org.
 zero            1D IN CNAME dyna.wikimedia.org.
+enterprise      1D IN CNAME dyna.wikimedia.org.
