Change DNS entries for tendril
 - tendril.wm.o goes to dyna and then to miscweb
 - tendril-legacy.wm.o replaces the old entry

Bug: T297605
Change-Id: Ie8316b455771c9e00de2a991ff94191cff9c6814

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -453,7 +453,9 @@ stream          1D IN CNAME dyna.wikimedia.org.
 
 svn             1D IN CNAME dyna.wikimedia.org.
 
-tendril         5M IN CNAME dbmonitor1002
+tendril         1D IN CNAME dyna.wikimedia.org.
+
+tendril-legacy  5M IN CNAME dbmonitor1002
 
 toolhub         1D IN CNAME dyna.wikimedia.org.
 
