--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -535,6 +535,7 @@ noboard-chapters 1D IN CNAME dyna.wikimedia.org.
 nostalgia        1D IN CNAME dyna.wikimedia.org.
 nz               1D IN CNAME dyna.wikimedia.org.
 office           1D IN CNAME dyna.wikimedia.org.
+ombuds           1D IN CNAME dyna.wikimedia.org.
 ombudsmen        1D IN CNAME dyna.wikimedia.org.
 otrs-wiki        1D IN CNAME dyna.wikimedia.org.
 outreach         1D IN CNAME dyna.wikimedia.org.
