--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -366,6 +366,7 @@ grafana-cloud        1D IN CNAME dyna.wikimedia.org.
 grafana-labs         1D IN CNAME dyna.wikimedia.org.
 grafana-next         1D IN CNAME dyna.wikimedia.org.    ; to replace grafana-beta which has a confusing name
 grafana-rw           1D IN CNAME dyna.wikimedia.org.
+grafana-next-rw      1D IN CNAME dyna.wikimedia.org.    ; for sso on grafana-next
 parsoid-rt-tests     1D IN CNAME dyna.wikimedia.org.
 performance     1D IN CNAME dyna.wikimedia.org.
 horizon         1D IN CNAME dyna.wikimedia.org.
