Add unseen.wikimedia.org DNS record
Bug: T300398
Change-Id: I37cae00c61a020d6446fb823eccd5781b120b8fc

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -674,7 +674,7 @@ schema           1D IN CNAME dyna.wikimedia.org.
 thanos           1D IN CNAME dyna.wikimedia.org.
 os-reports       1D IN CNAME dyna.wikimedia.org.
 enterprise       1D IN CNAME dyna.wikimedia.org.
-
+unseen           1D IN CNAME dyna.wikimedia.org.
 wikitech-static-iad  5M  IN A        162.209.126.221
 wikitech-static-iad  5M  IN AAAA     2001:4802:7800:1:be76:4eff:fe21:3782
 wikitech-static      5M  IN A        192.237.162.200
