--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -434,6 +434,7 @@ policy          5M  IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
 
 puppetboard      1D IN CNAME dyna.wikimedia.org.
 puppetboard-idptest 1D IN CNAME dyna.wikimedia.org.
+puppetboard-samltest 1D IN CNAME dyna.wikimedia.org.
 
 releases         1D IN CNAME dyna.wikimedia.org.
 releases-jenkins 1D IN CNAME dyna.wikimedia.org.
