--- a/templates/wikimedia-dns.org
+++ b/templates/wikimedia-dns.org
@@ -28,17 +28,28 @@
 
 ; Wikis (alphabetic order)
 
-; Wikidough resolver
-@           600 IN A    185.71.138.138 ; anycasted
+; Wikidough resolver. Anycast.
+@           600 IN A    185.71.138.138
+@           600 IN AAAA 2001:67c:930::1
 
-; Wikidough check (durum)
-check       600 IN A    185.71.138.139 ; anycasted
+; Wikidough check (durum). Anycast.
+;
+; landing page
+check       600 IN A    185.71.138.139
+check       600 IN AAAA 2001:67c:930::2
 
+; yes.check (DoH)
+yesdoh.check    600 IN A    185.71.138.140
+yesdoh.check    600 IN AAAA 2001:67c:930::3
+
+; yes.check (DoT)
+yesdot.check    600 IN A    185.71.138.142
+yesdot.check    600 IN AAAA 2001:67c:930::5
+
+; no.check
 ; This allows for UUID-based hostname lookups to defeat any client or
 ; browser-level caching between check queries, e.g.:
 ; https://7fbceba2-fabb-11eb-9a03-0242ac130003.check.wikimedia-dns.org/check
 ; This is essentially equivalent to: no.check since yes{doh,dot}.check will go through Wikidough (dnsdist)
-*.check        5   IN A    185.71.138.141 ; anycasted
-
-yesdoh.check   600 IN A    185.71.138.140 ; anycasted
-yesdot.check   600 IN A    185.71.138.142 ; anycasted
+*.check     5   IN A    185.71.138.141
+*.check     5   IN AAAA 2001:67c:930::4
