Add public dns entry for civi1002
This will be the 1:1 NAT ip that will direct to the internal host.

Bug: T296409
Change-Id: I1981a7038621f16cadcfdce5e439ce015c7e8d93

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -127,6 +127,7 @@ $INCLUDE netbox/wikimedia.org-drmrs
 
 ; Fundraising tech hosts (no automation)
 civi1001        1H  IN A    208.80.155.11
+civi1002        1H  IN A    208.80.155.17
 frbast-eqiad    1H  IN A    208.80.155.8
 frbast-codfw    1H  IN A    208.80.152.231
 frdata-eqiad    1H  IN A    208.80.155.16
