Add superset-next domain CNAME
Bug: T275575
Change-Id: I26ff49d11b90ddbd77a1b08008e96e063ec2bad2

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -648,6 +648,7 @@ uk.planet        1D IN CNAME dyna.wikimedia.org.
 zh.planet        1D IN CNAME dyna.wikimedia.org.
 puppet           5M IN CNAME puppetmaster1001.eqiad.wmnet.
 superset         1D IN CNAME dyna.wikimedia.org.
+superset-next    1D IN CNAME dyna.wikimedia.org.
 racktables       1D IN CNAME dyna.wikimedia.org.
 transparency     1D IN CNAME dyna.wikimedia.org.
 transparency-archive 1D IN CNAME dyna.wikimedia.org.
