--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -329,6 +329,8 @@ contint         5M IN CNAME contint2001.wikimedia.org.
 
 dash.frdev      1H  IN CNAME    frdev-eqiad
 
+datahub         1D IN CNAME dyna.wikimedia.org.
+
 design          1D IN CNAME dyna.wikimedia.org.
 
 dbtree          1D IN CNAME dyna.wikimedia.org.
