--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -338,6 +338,7 @@ dbtree          1D IN CNAME dyna.wikimedia.org.
 debmonitor      1D IN CNAME dyna.wikimedia.org.
 
 dev             1D IN CNAME dyna.wikimedia.org.
+developer       1D IN CNAME dyna.wikimedia.org.
 doc             1D IN CNAME dyna.wikimedia.org.
 docker-registry 1D IN CNAME dyna.wikimedia.org.
 docs            1D IN CNAME dyna.wikimedia.org.
