netbox-next: move netbox-next to caching infrastructure
Depends-On: I35e48b2f72aec2fdd52dc82c0e796602d4fda8b5
Bug: T296452
Change-Id: I9794deb1350f0af1645b214348d94c963bcf2db5

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -404,7 +404,6 @@ login           1D IN CNAME dyna.wikimedia.org.
 librenms        5M  IN CNAME    netmon1002
 netbox          1H  IN CNAME    netbox1001
 netbox-exports  1H  IN CNAME    netbox1001
-netbox-next     1H  IN CNAME    netbox-dev2001
 
 orchestrator    5M  IN CNAME    dborch1001
 
@@ -616,6 +615,7 @@ labsconsole      1D IN CNAME dyna.wikimedia.org.
 logstash         1D IN CNAME dyna.wikimedia.org.
 cas-logstash     1D IN CNAME dyna.wikimedia.org.
 moon             1D IN CNAME dyna.wikimedia.org.
+netbox-next      1D IN CNAME dyna.wikimedia.org.
 noc              1D IN CNAME dyna.wikimedia.org.
 nyc              1D IN CNAME dyna.wikimedia.org.
 old-bugzilla     1D IN CNAME dyna.wikimedia.org.
