--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -363,6 +363,8 @@ gerrit-replica    600 IN A        208.80.153.107
 gerrit-replica    600 IN AAAA     2620:0:860:4:208:80:153:107
 
 git             1D IN CNAME dyna.wikimedia.org.
+gitlab-replica-new 600 IN A 208.80.154.15
+gitlab-replica-new 600 IN AAAA 2620:0:861:1:208:80:154:15
 graphite        1D IN CNAME dyna.wikimedia.org.
 graphite-labs   1D IN CNAME dyna.wikimedia.org.
 grafana         1D IN CNAME dyna.wikimedia.org.
