Add in A and PTR records for civicrm-staging
After some discussion, we have decided to add dns mappings similar to
civirm for civi1002.

Bug: T308672
Change-Id: Ia776ce55bbd01dad378bd31474c646c242fdf6ee

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -594,6 +594,7 @@ civicrm          1H  IN MX       10 mx1001
 civicrm          1H  IN MX       10 mx2001
 civicrm.frdev    1H  IN CNAME    frdev-eqiad
 civicrm-codfw    1H  IN A        208.80.152.232
+civicrm-staging  1H  IN A        208.80.155.17
 coffee           1D IN CNAME dyna.wikimedia.org.
 cs               1D IN CNAME dyna.wikimedia.org.
 cz               1D IN CNAME dyna.wikimedia.org.
